icons issue on mobile firefox

--- a/css/works.css
+++ b/css/works.css
@@ -48,6 +48,7 @@
     display: inline-flex;
     flex-direction: row;
     width: 15%;
+    height: auto;
     padding: 10% 0 0;
 }
 
